feat: login form

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,4 +1,6 @@
 <header class="app-header">
-	<img src={{logoSrc}} class="app-logo" alt="logo" />
-	<h1 class="app-title">{{pageTitle}}</h1>
+	<h1 class="app-title">
+		<img src={{logoSrc}} class="app-logo" alt="logo" />
+		{{pageTitle}}
+	</h1>
 </header>
