--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -1,15 +1,15 @@
 .app-logo {
-  height: 80px;
+  height: 50px;
 }
-
+  
 .app-header {
   background-color: #222;
-  height: 150px;
+  height: 80px;
   padding: 20px;
-  color: white;
-  text-align: center;
+  color: rgb(163, 163, 163);
+  text-align: left;
 }
-
+  
 .app-title {
   font-size: 1.5em;
 }
