feat: add register form frontend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div>
     <app-header [pageTitle]="'Work Scheduler'" [logoSrc]="'assets/images/logo.png'"/>
     <div class="container-fluid">
-      <router-outlet></router-outlet>
+      <div class="row">
+        <div class="col">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
     </div>
 </div>
