--- a/frontend/src/app/auth/auth.component.css
+++ b/frontend/src/app/auth/auth.component.css
@@ -1,3 +1,7 @@
+div {
+  color: #8f4545;
+}
+
 .col-4 {
   background-color: #121212;
   display: flex;
@@ -15,13 +19,13 @@ input {
   font-size: 30px;
   padding: 10px 20px;
   margin-bottom: 10px;
-  width: 300px;
+  width: 100%;
   height: 50px;
   cursor: pointer;
 }
 
 button {
-  width: 200px;
+  width: 100%;
   text-align: center;
   padding: 10px 0px;
   background-color: rgb(8, 66, 105);
@@ -43,5 +47,5 @@ button {
 }
 
 #tab {
-  width: 80px;
+  width: 100px;
 }
