feat: add logout functionality

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,14 @@
 <div>
-    <app-header [pageTitle]="'Work Scheduler'" [logoSrc]="'assets/images/logo.png'"/>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <router-outlet></router-outlet>
-        </div>
+  <app-header
+    [pageTitle]="'Work Scheduler'"
+    [logoSrc]="'assets/images/logo.png'"
+  />
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <!-- <app-nav *ngIf="isAuthenticated"></app-nav> -->
+        <router-outlet></router-outlet>
       </div>
     </div>
+  </div>
 </div>
