feat: add notification service

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.success-snackbar {
+  background-color: #43a047 !important; /* green */
+}
+
+.error-snackbar {
+  background-color: #d32f2f !important; /* red */
+}
