--- a/frontend/src/app/bill/bill.component.html
+++ b/frontend/src/app/bill/bill.component.html
@@ -1,1 +1,5 @@
-<p>bill works!</p>
+<div class="row justify-content-center">
+  <div class="col-4">
+    <p>Bills page is under construction!</p>
+  </div>
+</div>
