--- a/frontend/src/app/project/project.component.html
+++ b/frontend/src/app/project/project.component.html
@@ -1,1 +1,5 @@
-<p>project works!</p>
+<div class="row justify-content-center">
+  <div class="col-4">
+    <p>Projects page is under construction!</p>
+  </div>
+</div>
