--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 html,
-body {
+body,
+input {
+  background-color: #2c2c2c;
   height: 100%;
-}
-body {
+  color: rgb(163, 163, 163);
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
