--- a/frontend/src/app/user/user.component.css
+++ b/frontend/src/app/user/user.component.css
@@ -13,10 +13,6 @@ form {
   margin-top: 50px;
 }
 
-input {
-  width: 100%;
-}
-
 .user-field {
   background-color: "#f7f7f7";
   border: 1px solid rgb(163, 163, 163);
@@ -33,6 +29,12 @@ input {
   top: -20px;
   left: 15px;
   font-weight: bold;
+}
+
+select {
+  color: rgb(163, 163, 163);;
+  background-color: #2c2c2c;
+  width: 100px;
 }
 
 .cancel-btn,
