--- a/frontend/src/app/user/user.component.css
+++ b/frontend/src/app/user/user.component.css
@@ -31,6 +31,10 @@ form {
   font-weight: bold;
 }
 
+input{
+  width: 100%;
+}
+
 select {
   color: rgb(163, 163, 163);;
   background-color: #2c2c2c;
