--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -12,8 +12,8 @@
     <a routerLink="/calendar">Calendar</a>
     <a routerLink="/bills">Bills</a>
     <a routerLink="/projects">Projects</a>
-    <a *forRoles="[role.ADMIN]" routerLink="/employees">Employees</a>
-    <a *forRoles="[role.ADMIN]" routerLink="/employees">Users</a>
+    <a *forRoles="[role.MANAGER]" routerLink="/users">Subordinates</a>
+    <a *forRoles="[role.ADMIN]" routerLink="/users">Users</a>
     <a routerLink="/user">User</a>
     <button (click)="signOut()">Sign out</button>
   </div>
